[feat] 区切りの任意指定を追加

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"Other"
 	],
 	"activationEvents": [
+        "onCommand:rotate-args.byRegExp",
         "onCommand:rotate-args.byComma",
         "onCommand:rotate-args.byEqual",
         "onCommand:rotate-args.bySpace"
@@ -19,6 +20,10 @@
 	"main": "./out/extension.js",
 	"contributes": {
 		"commands": [
+			{
+				"command": "rotate-args.byRegExp",
+				"title": "Rotate args by RegExp."
+			},
 			{
 				"command": "rotate-args.byComma",
 				"title": "Rotate args by comma."
