--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"version": "0.0.1",
 	"repository": "https://github.com/kuone314/VSCodeExtension-RotateArgs",
+  "icon": "Doc/icon.png",
 	"publisher": "kuone",
 	"engines": {
 		"vscode": "^1.70.0"
